# AI-Infrastructure-Lab

./: .gitignore  Cargo.toml  LICENSE
docs/architecture_notes/: daily_structure_setup.md  initial_structure_setup.md
docs/daily_logs/day01-process-model/: README.md
docs/daily_logs/day02-linux-cli/: README.md
docs/daily_logs/day03-linearalgebra-vectors/: README.md
projects/daily/day01_process_model/: Cargo.toml
projects/daily/day01_process_model/src/: main.rs
projects/daily/day02_linux_cli/cli_system_dissection/: README.md
projects/daily/day02_linux_cli/package_management/: README.md
projects/daily/day02_linux_cli/permissions_and_ownership/: README.md
projects/daily/day02_linux_cli/process_inspection/: README.md
projects/daily/day02_linux_cli/shell_pipelines/: README.md
projects/daily/day03_linearalgebra_vectors/: Cargo.toml
projects/daily/day03_linearalgebra_vectors/gaussian_elimination_two_by_two_system/: Cargo.toml
projects/daily/day03_linearalgebra_vectors/gaussian_elimination_two_by_two_system/src/: main.rs
projects/daily/day03_linearalgebra_vectors/matrix_multiplication/src/: main.rs
