[workspace]
resolver = "3"
members = [
    "projects/daily/day01_process_model", "projects/daily/day03_linearalgebra_vectors/gaussian_elimination_two_by_two_system", 
    "projects/daily/day03_linearalgebra_vectors/matrix_multiplication"
    ]

[profile.dev]
opt-level = 3
debug = true
overflow-checks = true
lto = true
debug-assertions = true
codegen-units = 1
